tests/zen/errors/type_mismatch.zen
let x = 1 + "hello"
